<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kuncham.kidseducationalapp.Alphabets"
    android:background="@drawable/background1">

    <ImageView
        android:id="@+id/gohome_image"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="15sp"
        android:src="@drawable/images"
        android:contentDescription="@string/todo"
        android:layout_marginStart="10sp"/>


    <ImageView
        android:id="@+id/alphabet"
        android:layout_width="500sp"
        android:layout_height="275dp"
        android:layout_marginLeft="50sp"
        android:layout_marginStart="50sp"
        android:layout_marginTop="-50sp"
        android:contentDescription="@string/todo"
        android:src="@drawable/a" />



    <HorizontalScrollView
        android:id="@+id/horizontalscrollView"
        android:layout_width="fill_parent"
        android:layout_height="50sp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100sp"
            android:layout_marginTop="8sp">

            <Button
                android:id="@+id/bt_a"
                android:text="@string/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#f70909"
                android:layout_marginLeft="10sp"
                android:onClick="a"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle" />
            <Button
                android:id="@+id/bt_b"
                android:text="@string/b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0421fb"
                android:layout_marginLeft="10sp"
                android:onClick="b"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_c"
                android:text="@string/c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ecfe14"
                android:layout_marginLeft="10sp"
                android:onClick="c"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_d"
                android:text="@string/d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fe13d4"
                android:layout_marginLeft="10sp"
                android:onClick="d"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_e"
                android:text="@string/e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fea813"
                android:layout_marginLeft="10sp"
                android:onClick="e"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_f"
                android:text="@string/f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fe3a12"
                android:layout_marginLeft="10sp"
                android:onClick="f"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_g"
                android:text="@string/g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ff13e1"
                android:layout_marginLeft="10sp"
                android:onClick="g"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_h"
                android:text="@string/h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#8b4512"
                android:layout_marginLeft="10sp"
                android:onClick="h"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_i"
                android:text="@string/i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0c0cf8"
                android:layout_marginLeft="10sp"
                android:onClick="i"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_j"
                android:text="@string/j"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#f8280c"
                android:layout_marginLeft="10sp"
                android:onClick="j"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_k"
                android:text="@string/k"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ff8b00"
                android:layout_marginLeft="10sp"
                android:onClick="k"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_l"
                android:text="@string/l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#09a8fa"
                android:layout_marginLeft="10sp"
                android:onClick="l"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_m"
                android:text="@string/m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#f3ff23"
                android:layout_marginLeft="10sp"
                android:onClick="m"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_n"
                android:text="@string/n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ff3b21"
                android:layout_marginLeft="10sp"
                android:onClick="n"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_o"
                android:text="@string/o"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#2227ff"
                android:layout_marginLeft="10sp"
                android:onClick="o"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_p"
                android:text="@string/p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#d95eec"
                android:layout_marginLeft="10sp"
                android:onClick="p"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_q"
                android:text="@string/q"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fb2906"
                android:layout_marginLeft="10sp"
                android:onClick="q"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_r"
                android:text="@string/r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#e7fb06"
                android:layout_marginLeft="10sp"
                android:onClick="r"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_s"
                android:text="@string/s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#bd5e1a"
                android:layout_marginLeft="10sp"
                android:onClick="s"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_t"
                android:text="@string/t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#157dec"
                android:layout_marginLeft="10sp"
                android:onClick="t"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_u"
                android:text="@string/u"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#e1452c"
                android:layout_marginLeft="10sp"
                android:onClick="u"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_v"
                android:text="@string/v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffb400"
                android:layout_marginLeft="10sp"
                android:onClick="v"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_w"
                android:text="@string/w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0018ff"
                android:layout_marginLeft="10sp"
                android:onClick="w"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_x"
                android:text="@string/x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffd701"
                android:layout_marginLeft="10sp"
                android:onClick="x"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_y"
                android:text="@string/y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#05a29b"
                android:layout_marginLeft="10sp"
                android:onClick="y"
                android:layout_marginStart="10sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/bt_z"
                android:text="@string/z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#24c600"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:onClick="z"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>



    </HorizontalScrollView >



</LinearLayout>
